docs/7.52/md/abenstreaming.md
---
title: "Streaming"
description: |
  Streaming describes how streams(https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstream_glosry.htm 'Glossary Entry') are passed. Streams are represented by instances of special classes. Streams are passed by calling the relevant methods of the object. Properties of Streams Streams ar
version: "7.52"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstreaming.htm"
abapFile: "abenstreaming.htm"
keywords: ["do", "if", "try", "method", "class", "data", "abenstreaming"]
---

* * *

SAP NetWeaver AS ABAP Release 752, ©Copyright 2017 SAP AG. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap.htm) →  [ABAP - Reference](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenabap_data_working.htm) → 

Streaming

Streaming describes how [streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstream_glosry.htm "Glossary Entry") are passed. Streams are represented by instances of special classes. Streams are passed by calling the relevant methods of the object.

Properties of Streams

Streams are classified by the following properties:

-   Stream category
    [Data streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_stream_glosry.htm "Glossary Entry") and [filter streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenfilter_stream_glosry.htm "Glossary Entry")

-   Stream direction
    [Reader streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenreader_stream_glosry.htm "Glossary Entry") and [writer streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenwriter_stream_glosry.htm "Glossary Entry")

-   Stream type
    [Binary streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenbinary_stream_glosry.htm "Glossary Entry") and [character streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abencharacter_stream_glosry.htm "Glossary Entry")

More Information

-   [Classes and Interfaces for Streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstreaming_classes_interfaces.htm)

-   [Streaming for Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_objects_streams.htm)

-   [Streaming in Open SQL](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenopen_sql_streaming.htm)

Continue
[Classes and Interfaces for Streams](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abenstreaming_classes_interfaces.htm)
[Streaming for Data Objects](https://help.sap.com/doc/abapdocu_752_index_htm/7.52/en-US/abendata_objects_streams.htm)