docs/7.57/md/abenstreaming.md
---
title: "Streaming"
description: |
  Streaming describes how streams(https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstream_glosry.htm 'Glossary Entry') are passed. Streams are represented by instances of special classes. The transfer of streams takes place by calling the relevant methods of the object. Properties of S
version: "7.57"
category: "general"
type: "abap-reference"
sourceUrl: "https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstreaming.htm"
abapFile: "abenstreaming.htm"
keywords: ["do", "if", "try", "method", "class", "data", "abenstreaming"]
---

* * *

AS ABAP Release 757, ©Copyright 2023 SAP SE. All rights reserved.

[ABAP - Keyword Documentation](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap.htm) →  [ABAP - Programming Language](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_reference.htm) →  [Processing Internal Data](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_data_working.htm) → 

 [![](Mail.gif?object=Mail.gif&sap-language=EN "Feedback mail for displayed topic") Mail Feedback](mailto:f1_help@sap.com?subject=Feedback on ABAP Documentation&body=Document: Streaming, ABENSTREAMING, 757%0D%0A%0D%0AError:%0D%0A%0D%0A%0D%0A%0D%0ASuggestion for
 improvement:)

Streaming

Streaming describes how [streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstream_glosry.htm "Glossary Entry") are passed. Streams are represented by instances of special classes. The transfer of streams takes place by calling the relevant methods of the object.

Properties of Streams   

Streams are classified by the following properties:

-   Stream kind
    
    [Data streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_stream_glosry.htm "Glossary Entry") and [filter streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenfilter_stream_glosry.htm "Glossary Entry")
    
-   Stream direction
    
    [Reader streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenreader_stream_glosry.htm "Glossary Entry") and [writer streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenwriter_stream_glosry.htm "Glossary Entry")
    
-   Stream type
    
    [Binary streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenbinary_stream_glosry.htm "Glossary Entry") and [character streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abencharacter_stream_glosry.htm "Glossary Entry")
    

More Information   

-   [Classes and interfaces for streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstreaming_classes_interfaces.htm)
-   [Streaming for Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_objects_streams.htm)
-   [Streaming in ABAP SQL](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenabap_sql_streaming.htm)

Continue
[Classes and Interfaces for Streams](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abenstreaming_classes_interfaces.htm)
[Streaming for Data Objects](https://help.sap.com/doc/abapdocu_757_index_htm/7.57/en-US/abendata_objects_streams.htm)